<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="channel_id">1.1.1</string>
    <string name="app_short_name">谵妄评估</string>
    <string name="app_name">欢迎使用智能化谵妄评估系统</string>
    <string name="product_detail">商品详情</string>
    <string name="comment">评价 (%d)</string>
    <string name="product_shopping_cart">购物车</string>
    <string name="title_checkout">用户结算</string>
    <string name="title_ordersubmit">确认订单</string>
    <string name="title_edit_cartitem">修改购物车</string>
    <string name="title_online_payment">现场支付</string>
    <string name="combo_detail">套装详情</string>
    <string name="title_my_coupon">我的优惠券</string>
    <string name="title_network">网络异常</string>
    <string name="self_confirm_dowloading">新的安装包正在下载中...</string>
    <string name="download_failed_title">小米零售下载失败</string>
    <string name="download_failed_tips">点击查看</string>
    <string name="download_failed_id"></string>
    <string name="checking_update">正在检查更新...</string>
    <string name="no_update">已经是最新版本</string>
    <string name="download_err">下载失败，请检查网络</string>
    <string name="update_no_sd">无法下载更新包，请检查SD卡是否可用</string>
    <string name="immediately_update">立即更新</string>
    <string name="cancel_update">取消</string>
    <string name="update_title">检测到新版本</string>
    <string name="currency_unit_template">金额合计: ¥%1$s</string>
    <string name="button_delete">删除</string>
    <string name="menu_orders">订单</string>
    <string name="menu_update">检查更新</string>
    <string name="menu_setting">设置</string>
    <string name="menu_printagain">重新打印</string>
    <string name="menu_uploadfile">上传日志</string>
    <string name="menu_switch_test">切换到测试(重启生效)</string>
    <string name="menu_switch_formal">切换到正式(重启生效)</string>
    <string name="switch_formal_test_hint">重启小米零售后生效</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_url">输入网址</string>
    <string name="tab_indicator_home">RASS</string>
    <string name="tab_indicator_category">注意力</string>
    <string name="tab_indicator_thinking">思维</string>
    <string name="tab_indicator_lottery">商品</string>
    <string name="tab_indicator_account">订单</string>
    <string name="tab_indicator_patient">患者</string>
    <string name="tab_indicator_disease">疾病</string>
    <string name="tab_indicator_environment">环境</string>
    <string name="tab_indicator_treatment">治疗</string>
    <string name="network_unavaliable">无法获取数据，请检查网络设置</string>
    <string name="service_unavailiable">网络连接超时，请稍后重试</string>
    <string name="data_error">数据出错，请稍后重试</string>
    <string name="ip_error">IP地址不合法，请选择正确的Wifi</string>
    <string name="auth_error">登陆帐号已过期，请重新登陆</string>
    <string name="check_network">查看网络设置</string>
    <string name="try_again">重试一下</string>
    <string name="login_again">重新登陆</string>
    <string name="sn_error">sn错误或此商品已经被卖过</string>
    <string name="stockout_error">此商品没有库存</string>
    <string name="already_add_shopping_cart">已加入购物车</string>
    <string name="add_shopping_cart_fail">加入购物车失败</string>
    <string name="add_shopping_cart_fail_reason_tomax">已到单品购买最大数量</string>
    <string name="exit_on_the_second_back_key_pressed">再按一次退出小米零售</string>
    <string name="print_again_error">Pos未连接，请重新连接</string>
    <string name="shopping_cartlist_text_center_template">售价:¥%1$s 数量:%2$d 小计:¥%3$s</string>
    <string name="shopping_cartlist_text_bottom_template">小计:¥%1$s</string>
    <string name="shopping_button_checkout">去结算</string>
    <string name="shopping_count_title">商品总数</string>
    <string name="shopping_cartlist_is_empty">购物车还是空的</string>
    <string name="shopping_cartlist_is_empty_subhead">现在就去选购吧</string>
    <string name="shopping_cartlist_is_empty_button_title">去逛逛</string>
    <string name="network_error">网络不给力</string>
    <string name="shopping_xianhuolist_is_empty">现货篮还是空的</string>
    <string name="shopping_xianhuolist_is_empty_subhead">现在就去选购吧</string>
    <string name="shopping_xianhuolist_is_empty_button_title">去扫扫</string>
    <string name="sn_unknown_info">抱歉，商品条码没有识别出来，请手输一下吧</string>
    <string name="input_sn_hint">请输入SN：</string>
    <string name="shopping_supply_title">加价购</string>
    <string name="shopping_cartlist_title">购物清单</string>
    <string name="shopping_add_supply_exception">添加加价购异常</string>
    <string name="checkout_activity_title">结算页面</string>
    <string name="checkout_no_invoice">不开发票</string>
    <string name="checkout_personal_invoice">个人发票</string>
    <string name="checkout_company_invoice">单位发票</string>
    <string name="checkout_build_request_params_exception">获取表单数据异常</string>
    <string name="checkout_set_form_data_exception">填写数据异常</string>
    <string name="checkout_next">下一步</string>
    <string name="checkout_button_change_address">更换地址</string>
    <string name="checkout_button_add_address">添加地址</string>
    <string name="checkout_form_address_titie">收货信息</string>
    <string name="checkout_form_hint">温馨提示</string>
    <string name="checkout_form_payment_titie">支付方式</string>
    <string name="checkout_form_shipment_titie">配送方式</string>
    <string name="checkout_form_delivertime_titie">送货时间</string>
    <string name="checkout_form_invoice_titie">发票信息</string>
    <string name="checkout_form_invoice_edit_title">单位名称</string>
    <string name="checkout_form_address_empty">请选择收货地址</string>
    <string name="checkout_form_invoice_title_input_pleases">请填写单位发票信息</string>
    <string name="login_before_check_shopping_cart">查看购物车前，请先登录</string>
    <string name="login_before_op_shopping_cart">将商品加入购物车前，请先登录</string>
    <string name="cartitem_title_bargin_template">[加价购]%1$s</string>
    <string name="incast_product">凑单商品</string>
    <string name="incast_balance_template">还有%1$s元即可免邮，看看凑单商品</string>
    <string name="shopping_act">您已获得的优惠</string>
    <string name="act_reduction">[满减]</string>
    <string name="act_post_free">[免邮]</string>
    <string name="act_gift">[赠品]</string>
    <string name="act_coupon">[赠券]</string>
    <string name="delete_cart_excption">删除商品异常</string>
    <string name="toast_added_favorite">已成功收藏，可以在我的收藏中查看</string>
    <string name="order_submit_example_title_format">订单预览，订单号:%1$s</string>
    <string name="order_submit_title">订单预览</string>
    <string name="order_submit_count_title">商品总数</string>
    <string name="order_submit_shipment_title">运费</string>
    <string name="order_submit_amount_title">应付总额</string>
    <string name="order_submit_amount_moling">抹零金额</string>
    <string name="order_submit_button_return">返回修改</string>
    <string name="order_submit_button_submit">提交订单</string>
    <string name="xianhuo_button_add">添加商品</string>
    <string name="order_submit_button_submit_n">正在提交...</string>
    <string name="order_submit_exception_send_data">发送数据失败</string>
    <string name="order_submit_exception_return_result">返回结果异常</string>
    <string name="order_submit_exception_make_order_template">生成订单成功，订单号 :%1$s</string>
    <string name="order_submit_count_descrption_template">商品总价 ¥%1$s + 配送费 ¥%2$s - 优惠券 ¥%3$s</string>
    <string name="checkcode_not_empty">验证码不能为空，请重新输入</string>
    <string name="checkcode_dialog_title">请输入验证码</string>
    <string name="order_submit_product_money">商品价格</string>
    <string name="order_submit_shipment">运送费</string>
    <string name="order_submit_coupon_discount">优惠卷</string>
    <string name="order_submit_activity_discount">优惠金额</string>
    <string name="order_submit_pay">应付总额: ¥%1$s</string>
    <string name="rmb_negative_id">-%1$s</string>
    <string name="edit_cart_item_activity_title">修改购物车</string>
    <string name="edit_cart_item_button_delete">删除</string>
    <string name="edit_cart_item_button_return">返回购物车</string>
    <string name="edit_cart_item_error">购物车修改失败</string>
    <string name="account">帐号</string>
    <string name="account_hint_text">用户名</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="account_exit">点击退出</string>
    <string name="next">下一步</string>
    <string name="prev">上一步</string>
    <string name="forget_password"><u>忘记密码</u></string>
    <string name="password">密码</string>
    <string name="password_hint_text">6~16位字符</string>
    <string name="bad_authentication">用户名密码不匹配</string>
    <string name="micloud_welcome_banner">小米帐户</string>
    <string name="micloud_account_name">小米帐户</string>
    <string name="micloud_log_prompt">请登录您的小米帐户</string>
    <string name="micloud_use_sys">使用系统帐户登录</string>
    <string name="micloud_use_existing">登录</string>
    <string name="micloud_reg_new"><u>注 册</u></string>
    <string name="micloud_error_empty_username">用户名不能为空</string>
    <string name="micloud_error_empty_pwd">密码不能为空</string>
    <string name="micloud_error_illegal_pwd">密码格式错误</string>
    <string name="micloud_input_email_prompt">请输入您的邮箱地址</string>
    <string name="micloud_email">邮箱地址</string>
    <string name="cancel">取消</string>
    <string name="account_login_primary_text">立即登录</string>
    <string name="account_login_second_text">享受更多贴心服务</string>
    <string name="welecome">欢迎来到小米零售！</string>
    <string name="account_my_list">我的订单</string>
    <string name="account_my_order_list">订单查询</string>
    <string name="account_wait_pay_list">待付款订单</string>
    <string name="account_wait_receive_list">待收货订单</string>
    <string name="account_my_end_list">已关闭订单</string>
    <string name="account_my_aftermarket">售后服务单</string>
    <string name="account_my_change_list">换货单</string>
    <string name="account_my_refund_list">退款单</string>
    <string name="account_my_repair_list">维修单</string>
    <string name="account_my_reserve_list">预约服务单</string>
    <string name="account_my_info">我的个人信息</string>
    <string name="account_my_address">管理地址</string>
    <string name="account_secret">修改密码</string>
    <string name="account_evaluate">我的评价</string>
    <string name="account_after_sale_order">售后服务单</string>
    <string name="account_express_list">已付款订单</string>
    <string name="account_write_review">评价商品</string>
    <string name="account_waiting_review">待评价商品</string>
    <string name="account_order_edit_text">修改订单</string>
    <string name="account_nfc_add_text">创建商品NFC标贴</string>
    <string name="micloud_input_password_prompt">请设置帐户密码</string>
    <string name="micloud_password_confirm_hint">再次确认密码</string>
    <string name="micloud_password_req_notice">您的密码长度必须为8－16字符，且必须包含一个数字、一个字母。可以使用特殊符号，字母区分大小写。</string>
    <string name="input_password_hint">请输入帐户密码</string>
    <string name="label_address_consignee">收货人姓名</string>
    <string name="hint_address_consignee">请填写真实姓名</string>
    <string name="label_address">收货地址</string>
    <string name="hint_address_location">路名或街道地址，门牌号，不少于5个字</string>
    <string name="label_address_zipcode">邮政编码</string>
    <string name="hint_address_zipcode">为6位数字</string>
    <string name="label_address_tel">手机号码</string>
    <string name="hint_address_tel">联系人电话，11位数字</string>
    <string name="hint_email">请填写邮箱地址</string>
    <string name="hint_email_domain">请填写邮箱后缀</string>
    <string name="submit">确认完成</string>
    <string name="order_edit_confirm">确认修改</string>
    <string name="order_edit_detail_title">个人信息</string>
    <string name="scanner_result">扫描结果：</string>
    <string name="scanner_result_label">没有符合的内容哦！</string>
    <string name="scanner_result_btn">再试一试</string>
      <string name="risk_treatment_n1">机械通气</string>
     <string name="risk_treatment_n2">腹部手术</string>
     <string name="risk_treatment_n3">胸部手术</string>
     <string name="risk_treatment_n4">镇静剂</string>
     <string name="risk_treatment_n5">用药物导致的昏迷</string>
     <string name="risk_treatment_n6">精神活性物质史</string>
     <string name="risk_treatment_n7">麻醉剂</string>
     <string name="risk_treatment_n8">类固醇激素</string>
     <string name="risk_treatment_n9">手术时间大于3小时</string>
     <string name="risk_treatment_n10">心脏瓣膜手术</string>
     <string name="risk_treatment_n11">心脏联合手术</string>
     <string name="risk_treatment_n12">术后房颤</string>
    <string name="email_symbol">\&#064;</string>
</resources>