<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/address_label_name"
            style="@style/Widget.Item.ListView.Label"
            android:text="@string/label_address_consignee" />

        <EditText
            android:id="@+id/address_consignee"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label_name"
            android:hint="@string/hint_address_consignee" />

        <TextView
            android:id="@+id/address_label"
            style="@style/Widget.Item.ListView.Label"
            android:layout_below="@id/address_consignee"
            android:text="@string/label_address" />

        <com.xiaomi.xms.sales.widget.RegionSelector
            android:id="@+id/city_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label" />

        <EditText
            android:id="@+id/address_location"
            style="@style/Widget.EditText.Multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_selector"
            android:layout_marginTop="12dip"
            android:hint="@string/hint_address_location" />

        <TextView
            android:id="@+id/address_label_zipcode"
            style="@style/Widget.Item.ListView.Label"
            android:layout_below="@id/address_location"
            android:text="@string/label_address_zipcode" />

        <EditText
            android:id="@+id/address_zipcode"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label_zipcode"
            android:hint="@string/hint_address_zipcode"
            android:inputType="phone"
            android:maxLength="6" />

        <TextView
            android:id="@+id/address_label_tel"
            style="@style/Widget.Item.ListView.Label"
            android:layout_below="@id/address_zipcode"
            android:text="@string/label_address_tel" />

        <EditText
            android:id="@+id/address_tel"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label_tel"
            android:hint="@string/hint_address_tel"
            android:inputType="phone" />

        <Button
            android:id="@+id/address_submit"
            style="@style/Widget.Button.Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_tel"
            android:layout_marginTop="15dip"
            android:text="@string/order_edit_confirm" />
    </RelativeLayout>

</ScrollView>