<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_address_consignee"
            style="@style/Widget.Item.ListView.Label"
            android:text="@string/label_address_consignee" />

        <EditText
            android:id="@+id/address_consignee"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_address_consignee"
            android:hint="@string/hint_address_consignee"
            android:maxLength="15" />

        <TextView
            android:id="@+id/label_address"
            style="@style/Widget.Item.ListView.Label"
            android:layout_below="@id/address_consignee"
            android:text="@string/label_address" />

        <LinearLayout
            android:id="@+id/address_province_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_address" >

            <Spinner
                android:id="@+id/address_province"
                style="@style/Widget.Spinner"
                android:layout_width="0dip"
                android:layout_marginRight="5dip"
                android:layout_weight="2" />

            <Spinner
                android:id="@+id/address_city"
                style="@style/Widget.Spinner"
                android:layout_width="0dip"
                android:layout_weight="3" />
        </LinearLayout>

        <Spinner
            android:id="@+id/address_district"
            style="@style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_below="@id/address_province_city"
            android:layout_marginTop="10dip" />

        <EditText
            android:id="@+id/address_location"
            style="@style/Widget.EditText.Multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_district"
            android:layout_marginTop="12dip"
            android:hint="@string/hint_address_location"
            android:maxLength="35" />

        <TextView
            android:id="@+id/address_label_zipcode"
            style="@style/Widget.Item.ListView.Label"
            android:layout_below="@id/address_location"
            android:text="@string/label_address_zipcode" />

        <EditText
            android:id="@+id/address_zipcode"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label_zipcode"
            android:hint="@string/hint_address_zipcode"
            android:inputType="phone"
            android:maxLength="6" />

        <TextView
            android:id="@+id/address_label_tel"
            style="@style/Widget.Item.ListView.Label"
            android:layout_below="@id/address_zipcode"
            android:text="@string/label_address_tel" />

        <EditText
            android:id="@+id/address_tel"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_label_tel"
            android:hint="@string/hint_address_tel"
            android:inputType="phone"
            android:maxLength="11" />

        <Button
            android:id="@+id/address_submit"
            style="@style/Widget.Button.Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_tel"
            android:layout_marginTop="24dip"
            android:text="@string/submit" />
    </RelativeLayout>

</ScrollView>