<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/container"
        style="@style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/order_edit_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                style="@style/Widget.Item.ListView.Label"
                android:text="@string/order_edit_detail_title" />

            <EditText
                android:id="@+id/order_edit_user_name"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_consignee"
                android:maxLength="15" />

            <EditText
                android:id="@+id/order_edit_user_tel"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_padding"
                android:hint="@string/hint_address_tel"
                android:inputType="phone"
                android:maxLength="11" />

            <LinearLayout
                android:id="@+id/order_edit_user_email_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_padding"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/order_edit_user_email"
                    style="@style/Widget.EditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="3"
                    android:hint="@string/hint_email"
                    android:inputType="textUri"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:text="@string/email_symbol" />

                <Spinner
                    android:id="@+id/order_edit_user_email_spinner"
                    style="@style/Widget.Spinner"
                    android:layout_width="0dip"
                    android:layout_weight="2" />

                <EditText
                    android:id="@+id/order_edit_user_email_domain"
                    style="@style/Widget.EditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:hint="@string/hint_email_domain"
                    android:inputType="textWebEmailAddress"
                    android:singleLine="true"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    style="@style/Widget.Item.ListView.Label"
                    android:text="@string/checkout_form_invoice_titie" />

                <RadioGroup
                    android:id="@+id/order_edit_form_radiogroup_invoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/corder_edit_form_invoice_title_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radiobutton_bottom_invoice_p"
                    android:gravity="center_vertical"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/order_edit_form_invoice_title"
                        style="@style/Widget.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/checkout_form_invoice_edit_title" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/order_edit_submit"
                style="@style/Widget.Button.Main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:layout_marginTop="24dip"
                android:text="@string/order_edit_confirm" />
        </LinearLayout>
    </ScrollView>

    <com.xiaomi.xms.sales.widget.EmptyLoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center" />

</FrameLayout>