<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/layout_padding"
    android:paddingLeft="@dimen/layout_padding"
    android:paddingRight="@dimen/layout_padding" >

    <ScrollView
        android:id="@+id/input_top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:scrollbarStyle="insideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/TextAppearance.Notice.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginRight="@dimen/label_margin"
                android:text="@string/micloud_input_password_prompt" />

            <EditText
                android:id="@+id/ev_password"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/input_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true" />

            <EditText
                android:id="@+id/ev_password_confirm"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/micloud_password_confirm_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true" />

            <TextView
                style="@style/TextAppearance.Notice.Gray.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_marginRight="@dimen/label_margin"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/micloud_password_req_notice" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_top_panel"
        android:layout_marginTop="15dip" >

        <Button
            android:id="@+id/btn_previous"
            style="@style/Widget.Button"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/button_padding"
            android:layout_weight="1"
            android:text="@string/prev" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Widget.Button.Main"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>